--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20
 
       - name: 📦 Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: 🔨 Build
         run: |
