--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,9 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "out/*"
-          target: "/root/Work/FutureSolutions/out"
+          source: "out"
+          target: "/root/Work/FutureSolutions"
+          overwrite: true
 
       - name: 🔁 Restart PM2
         uses: appleboy/ssh-action@master
